plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.3'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(17)
	}
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-web'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	// Lombok
	compileOnly 'org.projectlombok:lombok:1.18.30'
	annotationProcessor 'org.projectlombok:lombok:1.18.30'
	testCompileOnly 'org.projectlombok:lombok:1.18.30'
	testAnnotationProcessor 'org.projectlombok:lombok:1.18.30'

	runtimeOnly 'com.mysql:mysql-connector-j'

	// Spring security
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// Oauth 2.0
	implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

	// JWT
	implementation 'io.jsonwebtoken:jjwt-api:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-impl:0.12.3'
	implementation 'io.jsonwebtoken:jjwt-jackson:0.12.3'

	// Websocket
	implementation 'org.springframework.boot:spring-boot-starter-websocket'

	// Redis
	implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// Spring AOP
	implementation 'org.springframework.boot:spring-boot-starter-aop'

	// Redis의 LocalDateTime 직렬화를 위한 의존성
//	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'
//	implementation 'com.fasterxml.jackson.core:jackson-databind'

	// query dsl 버전 명시해야 jakarta 사용 (javax X)
	implementation 'com.querydsl:querydsl-apt:5.0.0'
	implementation 'com.querydsl:querydsl-jpa:5.0.0:jakarta'
	implementation 'com.querydsl:querydsl-core:5.0.0'

	annotationProcessor "com.querydsl:querydsl-apt:${dependencyManagement.importedProperties['querydsl.version']}:jakarta"

	annotationProcessor "jakarta.annotation:jakarta.annotation-api"
	annotationProcessor "jakarta.persistence:jakarta.persistence-api"
}

def querydslDir = "src/main/generated"

tasks.withType(JavaCompile) {
	options.annotationProcessorGeneratedSourcesDirectory = file(querydslDir)
}

sourceSets {
	main.java.srcDirs += [querydslDir]
}

tasks.named('test') {
	useJUnitPlatform()
}
